DHFPROD-7090: Button spacing issue in Run tile

--- a/marklogic-data-hub-central/ui/src/components/entities/matching/matching-step-detail/matching-step-detail.scss
+++ b/marklogic-data-hub-central/ui/src/components/entities/matching/matching-step-detail/matching-step-detail.scss
@@ -6,7 +6,7 @@
     white-space: normal;
 }
 
-#panelActions {
+#panelActionsMatch {
     .ant-dropdown-trigger {
         margin-top: 4px;
         height: 30px;
